refactor(domain): separate split and parse logic in NumberSplit